c01/3-service.yaml
# ตัวอย่าง Service
# Service ใช้เพื่อ expose Pod ให้สามารถเข้าถึงได้
---
# ClusterIP - ใช้ภายใน Cluster เท่านั้น
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80         # Port ของ Service
    targetPort: 80   # Port ของ Pod
    name: http

---
# NodePort - expose ให้เข้าถึงได้จากภายนอก Cluster ผ่าน Node IP
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080  # Port ที่เปิดบน Node (30000-32767)

---
# LoadBalancer - ใช้ cloud provider's load balancer
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
